--- a/package.json
+++ b/package.json
@@ -27,13 +27,23 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "codeceptjs": "^2.1.4",
+    "postcss-scss": "^2.0.0",
     "puppeteer": "^1.17.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "laravel-mix": "^4.0.16",
-    "node-sass": "^4.12.0",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^3.0.0",
     "resolve-url-loader": "2.3.1",
-    "sass-loader": "7.*"
-  }
+    "sass": "^1.22.1",
+    "sass-loader": "7.*",
+    "stylelint": "^10.1.0"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
