--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,4 +74,13 @@ jobs: # a collection of steps
             npm run dev # compile sass
             ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - deploy:
+          name: deploy builds to ${CIRCLE_BRANCH}
+          working_directory: /home/circleci/project
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "ds-build@sfgov.org"
+            git config user.name "Deployment Bot"
+            git commit --allow-empty -m "Trigger deployment [ci skip]"
+            # Push quietly to prevent showing the token in log
+            git push --set-upstream origin ${CIRCLE_BRANCH}
