--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
 	    "aws/aws-sdk-php-laravel": "~3.0",
         "doctrine/dbal": "^2.9",
         "illuminate/mail": "5.7.*",
-        "sentry/sentry-laravel": "^0.11.0"
+        "sentry/sentry-laravel": "^0.11.0",
+        "symfony/http-foundation": "^4.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
