--- a/package.json
+++ b/package.json
@@ -24,12 +24,6 @@
     "url": "https://github.com/SFDigitalServices/webform/issues"
   },
   "homepage": "https://github.com/SFDigitalServices/webform#readme",
-  "dependencies": {
-    "acorn": "^6.1.1",
-    "codeceptjs": "^2.1.4",
-    "postcss-scss": "^2.0.0",
-    "puppeteer": "^1.17.0"
-  },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "laravel-mix": "^4.0.16",
@@ -38,7 +32,12 @@
     "resolve-url-loader": "2.3.1",
     "sass": "^1.22.1",
     "sass-loader": "7.*",
-    "stylelint": "^10.1.0"
+    "stylelint": "^10.1.0",
+    "puppeteer": "^1.17.0",
+    "chai": "^4.2.0",
+    "codeceptjs": "^2.1.4",
+    "acorn": "^6.1.1",
+    "postcss-scss": "^2.0.0"
   },
   "browserslist": [
     "last 1 version",
