--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/SFDigitalServices/webform#readme",
   "devDependencies": {
+    "acorn": "^6.3.0",
+    "chai": "^4.2.0",
+    "codeceptjs": "^2.3.0",
     "cross-env": "^5.2.0",
-    "laravel-mix": "^4.0.16",
+    "laravel-mix": "^4.1.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.0.0",
+    "puppeteer": "^1.19.0",
     "resolve-url-loader": "2.3.1",
-    "sass": "^1.22.1",
-    "sass-loader": "7.*",
-    "stylelint": "^10.1.0",
-    "puppeteer": "^1.17.0",
-    "chai": "^4.2.0",
-    "codeceptjs": "^2.1.4",
-    "acorn": "^6.1.1",
-    "postcss-scss": "^2.0.0"
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
+    "stylelint": "^10.1.0"
   },
   "browserslist": [
     "last 1 version",
