--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "doctrine/dbal": "^2.9",
         "illuminate/mail": "5.7.*",
         "sentry/sentry-laravel": "^0.11.0",
-        "symfony/http-foundation": "^4.1"
+        "symfony/http-foundation": "^4.1",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
