--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs: # a collection of steps
             ./vendor/bin/codecept run # run unit/api/functional tests
             ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             cd tests/frontend
-            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run #run e2e tests --steps
+            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run #run e2e tests
             cd ../../
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
             npm run dev # compile sass
