--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
 	    "aws/aws-sdk-php-laravel": "~3.0",
         "doctrine/dbal": "^2.9",
         "illuminate/mail": "5.7.*",
-        "sentry/sentry-laravel": "^0.11.0",
+        "sentry/sentry-laravel": "1.4.1",
         "symfony/http-foundation": "^4.1",
-        "league/flysystem": "^1.0"
+        "league/flysystem": "^1.0",
+        "sentry/sentry": "^2.0",
+        "php-http/curl-client": "^2.0",
+        "guzzlehttp/psr7": "^1.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
