--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "codeceptjs": "^2.1.4",
-    "postcss-scss": "^2.0.0",
-    "puppeteer": "^1.19.0"
+    "postcss-scss": "^2.0.0"
   },
   "devDependencies": {
     "acorn": "^6.1.1",
@@ -43,7 +42,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
-    "puppeteer": "^1.17.0",
+    "puppeteer": "^1.20.0",
     "resolve-url-loader": "2.3.1",
     "sass": "^1.22.1",
     "sass-loader": "7.*",
