--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "codeceptjs": "^2.1.4",
-    "postcss-scss": "^2.0.0"
+    "postcss-scss": "^2.0.0",
+    "puppeteer-firefox": "^0.5.0"
   },
   "devDependencies": {
     "acorn": "^6.1.1",
