--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs: # a collection of steps
       - checkout # special step to check out source code to working directory
       - run: sudo a2enmod rewrite
       - run: sudo docker-php-ext-install mysqli pdo_mysql
+      - run: sudo apt-get -y install vim
       - run:
           name: Install Project Dependencies
           command: composer install -n --prefer-dist
@@ -48,34 +49,7 @@ jobs: # a collection of steps
           name: Configure & start Apache
           command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
       # end to end testing
-      - run:
-          name: install nvm
-          command: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
-      - run:
-          name: activate nvm
-          command: |
-            # Activate nvm
-            export NVM_DIR=$HOME/.nvm
-            touch $HOME/.nvmrc
-            source $NVM_DIR/nvm.sh
-            # Use node 11.0.0
-            nvm install 11.0.0 && nvm alias default 11.0.0
-            echo 11.0.0 > $HOME/.nvmrc
-            # Enable nvm in following steps
-            echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
-            npm install
-            export NPX_HOME=$HOME/.nvm/versions/node/v11.0.0/bin
-            chmod -R 777 storage #apache needs to write to logs
-            cp .env.example .env
-            ./vendor/bin/codecept run # run unit/api/functional tests
-            ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
-            cd tests/frontend
-            sudo sh -c 'echo "127.0.0.1 webform.test" >> /etc/hosts'
-            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run --verbose #run e2e tests
-            cd ../../
-            ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
-            npm run dev # compile sass
-            ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
+
       - deploy:
           name: deploy builds to ${CIRCLE_BRANCH}
           working_directory: /home/circleci/project
