--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/php:7.2-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:apache-jessie-browsers # ...with this image as the primary container; this is where all `steps` will run
         environment:
           APP_ENV: production
           APP_DEBUG: true
@@ -25,6 +25,7 @@ jobs: # a collection of steps
     working_directory: /home/circleci/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
+      - run: sudo a2enmod rewrite
       - run: sudo docker-php-ext-install mysqli pdo_mysql
       - run: sudo apt-get -y install vim
       - run:
@@ -44,7 +45,10 @@ jobs: # a collection of steps
           command: composer update
       - run: php artisan migrate:refresh --force
       - run: php artisan db:seed --force
-        # end to end testing
+      - run:
+          name: Configure & start Apache
+          command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
+      # end to end testing
       - run:
           name: install nodejs
           command: curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
