--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/php:apache-stretch-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:7.2-apache-browsers # ...with this image as the primary container; this is where all `steps` will run
         environment:
           APP_ENV: production
           APP_DEBUG: true
@@ -42,7 +42,7 @@ jobs: # a collection of steps
             - vendor
       - run:
           name: Update Missed Dependencies
-          command: composer update
+          command: composer update --prefer-dist
       - run: php artisan migrate:refresh --force
       - run: php artisan db:seed --force
       - run:
@@ -61,10 +61,10 @@ jobs: # a collection of steps
             chmod -R 777 storage #apache needs to write to logs
             cp .env.example .env
             ./vendor/bin/codecept run # run unit/api/functional tests
-            ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             cd tests/frontend
             npx codeceptjs run --verbose #run e2e tests
             cd ../../
+            ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
             npm run dev # compile sass
             ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
