--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs: # a collection of steps
             cp .env.example .env
             ./vendor/bin/codecept run # run unit/api/functional tests
             cd tests/frontend
-            npx codeceptjs run --verbose #run e2e tests
+            npx codeceptjs run --override '{ "helpers": {"Puppeteer": {"url": "https://formbuilder-sf-staging-pr-'${CIRCLE_PULL_REQUEST##*/}'.herokuapp.com/"}}}' #run e2e tests
             cd ../../
             ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
