--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "acorn": "^6.1.1",
     "codeceptjs": "^2.1.4",
-    "postcss-scss": "^2.0.0",
-    "sf-design-system": "^1.1.0"
+    "postcss-scss": "^2.0.0"
   },
   "devDependencies": {
     "acorn": "^6.1.1",
@@ -47,7 +46,8 @@
     "resolve-url-loader": "2.3.1",
     "sass": "^1.22.1",
     "sass-loader": "7.*",
-    "stylelint": "^10.1.0"
+    "stylelint": "^10.1.0",
+    "sf-design-system": "^1.1.0"
   },
   "browserslist": [
     "last 1 version",
