--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,49 +25,56 @@ jobs: # a collection of steps
     working_directory: /home/circleci/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
+      - run:
+          name: initiate environment setup
+          command: |
+            chmod -R 777 storage #apache needs to write to logs
+            cp .env.example .env
+            sudo sh -c 'echo "127.0.0.1 webform.test" >> /etc/hosts' #set url for test
       - run: sudo a2enmod rewrite
       - run: sudo docker-php-ext-install mysqli pdo_mysql
-      - run: sudo apt-get -y install vim
       - run:
           name: Install Project Dependencies
           command: composer install -n --prefer-dist
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
-            - composer-v2.1-{{ checksum "composer.lock" }}
+            - composer-v2.2-{{ checksum "composer.lock" }}
             # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
-            - composer-v2.1-
+            - composer-v2.2-
       - save_cache: # special step to save the dependency cache with the `composer.lock` cache key template
-          key: composer-v2.1-{{ checksum "composer.lock" }}
+          key: composer-v2.2-{{ checksum "composer.lock" }}
           paths:
             - vendor
       - run:
           name: Update Missed Dependencies
           command: composer update --prefer-dist
-      - run: php artisan migrate:refresh --force
+      - run:
+          name: Database migration
+          command: php artisan migrate:refresh --force
       - run: php artisan db:seed --force
       - run:
           name: Configure & start Apache
           command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
       # end to end testing
       - run:
-          name: install nodejs
+          name: download nodejs
           command: curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
       - run:
-          name: install depdencies and run tests
+          name: Install nodejs
+          command:  sudo apt-get install -y nodejs
+      - run:
+          name: Install node dependencies
+          command:  npm install
+      - run:
+          name: run tests
           command: |
-            sudo sh -c 'echo "127.0.0.1 webform.test" >> /etc/hosts'
-            sudo apt-get install -y nodejs
-            npm install
-            chmod -R 777 storage #apache needs to write to logs
-            cp .env.example .env
-            ./vendor/bin/codecept run # run unit/api/functional tests
-            cd tests/frontend
-            npx codeceptjs run --override '{ "helpers": {"Puppeteer": {"url": "https://formbuilder-sf-staging-pr-'${CIRCLE_PULL_REQUEST##*/}'.herokuapp.com/"}}}' #run e2e tests
-            cd ../../
             ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
             npm run dev # compile sass
             ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
+            ./vendor/bin/codecept run # run unit/api/functional tests
+            cd tests/frontend #run E2E tests
+            npx codeceptjs run --override '{ "helpers": {"Puppeteer": {"url": "https://formbuilder-sf-staging-pr-'${CIRCLE_PULL_REQUEST##*/}'.herokuapp.com/"}}}' #run e2e tests
       - deploy:
           name: deploy builds to ${CIRCLE_BRANCH}
           working_directory: /home/circleci/project
