--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs: # a collection of steps
           command: |
             ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
+            sh scripts/copy_sf_design_system.sh #copy sf-design-system source files
             npm run dev # compile sass
             ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
             ./vendor/bin/codecept run # run unit/api/functional tests
