--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,9 @@
     </IfModule>
 
     RewriteEngine On
+    # Force all requests to use HTTPS on Heroku.
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Apache seems to discard the Authorization header if it is not a
     # base64 encoded user/pass combo
