--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,8 +4,13 @@
     </IfModule>
 
     RewriteEngine On
-    # Force all requests to use HTTPS on Heroku.
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    # If we receive a forwarded http request from a proxy...
+    RewriteCond %{HTTP:X-Forwarded-Proto} =http [OR]
+
+    # ...or just a plain old http request directly from the client
+    RewriteCond %{HTTP:X-Forwarded-Proto} =""
+    RewriteCond %{HTTPS} !=on
+    # Redirect to https version
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Apache seems to discard the Authorization header if it is not a
