--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,8 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/php:7.2-apache-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:7.2-apache # ...with this image as the primary container; this is where all `steps` will run
         environment:
-          APP_ENV: production
-          APP_DEBUG: true
-          APP_KEY: kjcndjjksddwdwdw
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
@@ -16,7 +13,6 @@ jobs: # a collection of steps
           DB_PASSWORD: 1234
           CACHE_DRIVER: file
           QUEUE_DRIVER: sync
-          SENTRY_DSN: https://b53658ff4ec749719da39905217d41e0@sentry.io/1366253
       - image: circleci/mysql:5.6-ram
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
