--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs: # a collection of steps
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: '1234'
           MYSQL_DATABASE: webform
+      - image: circleci/node:12 # Use your desired version
+        environment:
+          NODE_ENV: development # Only needed if puppeteer is in `devDependencies`
     working_directory: /home/circleci/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
@@ -51,16 +54,20 @@ jobs: # a collection of steps
       - run:
           name: Configure & start Apache
           command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
-      # end to end testing
       - run:
-          name: download nodejs
-          command: curl -sL https://deb.nodesource.com/setup_12.x | sudo -E bash -
+        name: Install Headless Chrome dependencies
+        command: >
+          sudo apt-get install -yq \
+          gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+          libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
+          libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 \
+          libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1
+          libxtst6 ca-certificates \
+          fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
       - run:
-          name: Install nodejs
-          command:  sudo apt-get install -y nodejs
-      - run:
-          name: Install node dependencies
-          command:  npm install
+        name: Install puppeteer with chronium
+        command: |
+          npm i puppeteer
       - run:
           name: run tests
           command: |
